--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# HR3 has its own git repository - exclude it
-app/HR3/.git/
-
-# dependencies - all node_modules in project
-node_modules/
-**/node_modules/
+# dependencies
+/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -21,33 +17,21 @@ node_modules/
 /.next/
 /out/
 
-# HR3 Vite build
-app/HR3/dist/
-app/HR3/dist-ssr/
-
 # production
 /build
 
 # misc
 .DS_Store
 *.pem
-*.local
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-lerna-debug.log*
 
-# env files - keep these private!
-.env
-.env.*
-**/.env
-**/.env.*
-
-# Sensitive files
-**/credentials.txt
+# env files (can opt-in for committing if needed)
+.env*
 
 # vercel
 .vercel
@@ -55,17 +39,3 @@ lerna-debug.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# Editor directories
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Uploads (optional - remove if you want to track uploads)
-/uploads/*
-!uploads/.gitkeep
