--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "formidable": "^3.5.4",
     "gridfs-stream": "^1.1.1",
     "jose": "^6.1.3",
